# rss_aggregator

./: .env-non-dev  .gitignore  DockerFile  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  prometheus.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3f4287c70358_.py  40d62638271e_.py  9a18f22d00c2_.py  ad60bb7830d3_.py  e5cc63b1efb9_.py
app/: config.py  database.py  exceptions.py  grafana-dashboard.json  logger.py  main.py
app/Article/: dao.py  models.py  router.py  schemas.py
app/DAO/: base_dao.py
app/Feed/: dao.py  models.py  parser.py  router.py  schemas.py
app/User/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
app/admin/: admin_setup.py
app/prometheus/: router.py
app/tasks/: celery_app.py  tasks.py
app/tests/: conftest.py  test_article.json  test_feed.json  test_user.json
app/tests/integration_test/test_article/: test_dao_article.py
app/tests/integration_test/test_feed/: test_dao_feed.py
app/tests/integration_test/test_user/: test_api_user.py  test_dao_user.py
